--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,17 +1,6 @@
-## Template › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/advanced-usage.md#setting-author-url
-# -------------------------------------
-# {author_id}:
-#   name: {full name}
-#   twitter: {twitter_of_author}
-#   url: {homepage_of_author}
-# -------------------------------------
-
-cotes:
-  name: Cotes Chung
-  twitter: cotes2020
-  url: https://github.com/cotes2020/
-
-sille_bille:
-  name: Dinesh Prasanth Moluguwan Krishnamoorthy
-  twitter: dinesh_MKD
-  url: https://github.com/SilleBille/
+---
+syk531:
+  name: Song Young Kwang
+  email: syk531@naver.com
+  web: https://syk531.github.io/
+  image: https://syk531.github.io/assets/img/profile.jpg
