--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,6 +1,6 @@
 ---
 syk531:
-  name: Song Young Kwang
+  name: syk531
   email: syk531@naver.com
   web: https://syk531.github.io/
   image: https://syk531.github.io/assets/img/profile.jpg
