--- a/_config.yml
+++ b/_config.yml
@@ -89,24 +89,18 @@ avatar: '/assets/img/profile.jpg'
 toc: true
 
 comments:
-  active:         # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
+  provider: giscus
+  active:   giscus      # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
   # The active options are as follows:
-  disqus:
-    comments: true
-    shortname: 'syk531'    # fill with the Disqus shortname. 占쏙옙 https://help.disqus.com/en/articles/1717111-what-s-a-shortname
-  # utterances settings 占쏙옙 https://utteranc.es/
-  utterances:
-    repo:         # <gh-username>/<repo>
-    issue_term:   # < url | pathname | title | ...>
-  # Giscus options 占쏙옙 https://giscus.app
   giscus:
-    repo:             # <gh-username>/<repo>
-    repo_id:
-    category:
-    category_id:
-    mapping:          # optional, default to 'pathname'
-    input_position:   # optional, default to 'bottom'
-    lang:             # optional, default to the value of `site.lang`
+    repo:             "syk531/syk531.github.io"
+    repo_id:          "R_kgDOHtiXgA"
+    category:         "Announcements"
+    category_id:      "DIC_kwDOHtiXgM4CQxT7"
+    mapping:          "pathname"
+    reaction-enabled: "1"
+    theme:            "dark_dimmed"
+    crossorigin:      "anonymous"
 
 # Self-hosted static assets, optional 占쏙옙 https://github.com/cotes2020/chirpy-static-assets
 assets:
