--- a/_config.yml
+++ b/_config.yml
@@ -195,3 +195,8 @@ jekyll-archives:
   permalinks:
     tag: /tags/:name/
     category: /categories/:name/
+
+webrick:
+  headers:
+    Content-Security-Policy: default-src 'none'; script-src 'self'; connect-src 'self'; img-src 'self'; style-src 'self'; 
+    My-Other-Header: My-Other-Value    
